big update with 5 new projects and small edits to old ones, added tools to home menu, updated about

--- a/_posts/2016-01-26-atleta.md
+++ b/_posts/2016-01-26-atleta.md
@@ -12,9 +12,14 @@ Atleta is a hand-drawn sailing adventure made for [Global Game Jam 2016](http://
 
 My contributions on this project included:
 
-* Game Design
-* Level Design
-* Programming (C#)
+Design:
+* Gameplay
+* Level
+* UI/UX
+
+Programming (C#):
+* Gameplay
+* UI
 
 ![Atleta 1]({{ site.github.url }}/img/atleta/Atleta_1.png)
 ![Atleta 2]({{ site.github.url }}/img/atleta/Atleta_2.png)
