another fix attempt for file name casing

--- a/_posts/2019-09-08-olympus.md
+++ b/_posts/2019-09-08-olympus.md
@@ -25,7 +25,7 @@ Programming
 * UI
 * Arcade Inputs including Coin Acceptor
 
-![Olympus 1]({{ site.github.url }}/img/olympus/Olympus-1.PNG)
-![Olympus 2]({{ site.github.url }}/img/olympus/Olympus-2.PNG)
-![Olympus 3]({{ site.github.url }}/img/olympus/Olympus-3.PNG)
+![Olympus 1]({{ site.github.url }}/img/olympus/Olympus-1.png)
+![Olympus 2]({{ site.github.url }}/img/olympus/Olympus-2.png)
+![Olympus 3]({{ site.github.url }}/img/olympus/Olympus-3.png)
 ![Olympus 4]({{ site.github.url }}/img/olympus/Olympus-4.jpg)
