Testing spacing in posts

--- a/_posts/2019-09-08-olympus.md
+++ b/_posts/2019-09-08-olympus.md
@@ -11,7 +11,7 @@ Olympus is a 2 player arcade game where you and your opponent face off in a dodg
 
 There is only one copy of this game in existence, which is installed in a cocktail cabinet located at [River Styx Breweing](https://www.google.com/maps/place/River+Styx+Brewing/@42.5818778,-71.8014058,15z/data=!4m2!3m1!1s0x0:0xbf6d3de40912945c?sa=X&ved=2ahUKEwjU65Sjqs_kAhWjMX0KHTDuBkQQ_BIwDHoECAsQCA). Take a trip with a friend to their tap room to try their amazing beer and the game. Make sure to bring your quarters; it's $0.50 per play!
 
-
+<div style ="height:100px"></div>
 
 ### Contributions
 
