applying new formatting to all posts

--- a/_posts/2018-05-07-huntfell.md
+++ b/_posts/2018-05-07-huntfell.md
@@ -6,19 +6,23 @@ categories: game
 image: /img/huntfell/Huntfell-Cover.png
 tags: game
 ---
+### Description
 HuntFell is an isometric action-adventure about slaying your way through an abandoned manor to uncover its secrets. Explore the darkness using elemental weapons and piece together the truth behind the fell beasts that remain.
 
 <iframe src="https://itch.io/embed/239789" height="167" width="552" frameborder="0"></iframe>
+<div style = "height:50px"></div>
 
-My main contributions on this project included:
+### Contributions
 
-Design:
+####Design:
 * Co-Creative Director
 
-Programming (C#):
+####Programming (C#):
 * Lead Programmer
 * Gameplay
 * UI
+
+<div style = "height:50px"></div>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/W-Keh3Kz3RU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 ![Huntfell 1]({{ site.github.url }}/img/huntfell/huntfell-1.png)
