--- a/_posts/2015-09-26-skoguth.md
+++ b/_posts/2015-09-26-skoguth.md
@@ -6,24 +6,28 @@ categories: game
 image: /img/skoguth/Skoguth_Banner-opt.jpg
 tags: game
 ---
+### Description
 SKÓGUTH is a short, atmospheric first-person experience about hunting an ancient god. It has three endings, unsettling sound design, and a lot of fog. Made by three students in a month.
 
-"With your one bullet, and a neat visor effect that reminds of Metroid Prime and Halo. Really, you'll explore. You'll conjure a story from the various details in the environment, including this Easter Island statue-y thing, and some interesting piles of little stones."
+>"With your one bullet, and a neat visor effect that reminds of Metroid Prime and Halo. Really, you'll explore. You'll conjure a story from the various details in the environment, including this Easter Island statue-y thing, and some interesting piles of little stones."
 
 \- [PC Gamer](http://www.pcgamer.com/free-games-of-the-week/)
 
 <iframe frameborder="2" src="https://itch.io/embed/43602?linkback=true&amp;border_width=0&amp;bg_color=00A5E5&amp;fg_color=eeeeee&amp;border_color=0080FF" width="550" height="165"></iframe>
+<div style = "height:50px"></div>
 
-My contributions on this project included:
+### Contributions
 
-Design:
+####Design:
 * Gameplay
 * Level
 * UI/UX
 
-Programming (C#):
+####Programming (C#):
 * Gameplay
 * UI
+
+<div style = "height:50px"></div>
 
 ![Skoguth 1]({{ site.github.url }}/img/skoguth/Sko_1.png)
 ![Skoguth 2]({{ site.github.url }}/img/skoguth/Sko_2.png)
