--- a/_posts/2016-01-26-atleta.md
+++ b/_posts/2016-01-26-atleta.md
@@ -6,20 +6,24 @@ categories: game
 image: /img/atleta/Atleta_Banner-opt.jpg
 tags: game
 ---
+### Description
 Atleta is a hand-drawn sailing adventure made for [Global Game Jam 2016](http://globalgamejam.org/2016/games/atleta) about a young woman coming of age by sailing to four islands and learning the truths of the sea. 
 
 <iframe frameborder="2" src="https://itch.io/embed/53003?linkback=true&amp;border_width=0&amp;bg_color=00A5E5&amp;fg_color=eeeeee&amp;border_color=0080FF" width="550" height="165"></iframe>
+<div style = "height:50px"></div>
 
-My contributions on this project included:
+### Contributions
 
-Design:
+####Design:
 * Gameplay
 * Level
 * UI/UX
 
-Programming (C#):
+####Programming (C#):
 * Gameplay
 * UI
+
+<div style = "height:50px"></div>
 
 ![Atleta 1]({{ site.github.url }}/img/atleta/Atleta_1.png)
 ![Atleta 2]({{ site.github.url }}/img/atleta/Atleta_2.png)
